--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "types": ["@cloudflare/workers-types"]
+    "types": ["@cloudflare/workers-types"],
+    "sourceMap": true
   }
 }
