--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.7.0",
+    "@mui/x-date-pickers": "^8.7.0",
     "zod": "^3.25.74"
   }
 }
